--- a/SnackisUppgif-main/SnackisUppgift/Pages/Index.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Index.cshtml
@@ -181,7 +181,7 @@
 	<div class="row">
 		<div class="col-md-3">
 			<div class="subjects-sidebar" style="top: 59px;">
-				<h6>Subjects:</h6>
+				<h6>Topics:</h6>
 				<div class="list-group">
 					@foreach (var subject in Model.Subjects)
 					{
