--- a/SnackisUppgif-main/SnackisUppgift/Pages/Reply.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Reply.cshtml
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-image: url('/Backgroundimages/SnowFoxes.png');
+            background-image: url('/Backgroundimages/wp2668083.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -40,7 +40,7 @@
         }
 
         h1 {
-            color: #007bff;
+            color: red;
             font-weight: bold;
             margin-bottom: 1rem;
             text-align: center;
@@ -59,8 +59,8 @@
 
         .btn-primary {
             color: #fff;
-            background-color: #007bff;
-            border-color: #007bff;
+            background-color: red;
+            border-color: red;
             width: 100%;
             padding: 10px;
             font-size: 18px;
@@ -90,16 +90,16 @@
 
 <body>
     <div class="container">
-        <h1>Reply to Message</h1>
+        <h1>Follow up</h1>
 
         <form method="post">
             <input type="hidden" asp-for="OriginalMessage.Id" />
             <input type="hidden" id="email" name="email" class="form-control" asp-for="OriginalMessage.Sender.Email">
             <div class="form-group">
-                <label for="replyContent">Your Reply</label>
+                <label for="replyContent">Your Response</label>
                 <textarea id="replyContent" name="replyContent" class="form-control"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Send Reply</button>
+            <button type="submit" class="btn btn-primary">Send Response</button>
         </form>
 
         <p>@Model.OriginalMessage.Message</p>
