--- a/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SnackisUppgift</title>
+    <title>@ViewData["Title"] - SnackisDidar</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/SnackisUppgift.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/SnackisDidar.styles.css" asp-append-version="true" />
 </head>
 <style>
     body {
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SnackisUppgift</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">SnackisDidar</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,11 +62,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - SnackisUppgift - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
-    </footer>
+   
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
