--- a/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml.css
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml.css
@@ -10,7 +10,7 @@ a.navbar-brand {
 }
 
 a {
-  color: #0077cc;
+  color: black !important;
 }
 
 .btn-primary {
@@ -41,10 +41,3 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
-}
