--- a/SnackisUppgif-main/SnackisUppgift/Pages/Admin/PostAdmin/Index.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Admin/PostAdmin/Index.cshtml
@@ -5,6 +5,14 @@
     ViewData["Title"] = "Index";
 }
 
+<style>
+    .body {
+        background-image: url('/Backgroundimages/best-background-for-website-14.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+</style>
 <h1>Index</h1>
 
 <p>
