--- a/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="~/SnackisDidar.styles.css" asp-append-version="true" />
 </head>
 <style>
-    body {
-        background-color: red;
+    .body {
+        background-image: url('/Backgroundimages/best-background-for-website-14.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
     }
+
 </style>
 <body>
     <header>
