--- a/SnackisUppgif-main/SnackisUppgift/Pages/Admin/SubjectAdmin/Create.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Admin/SubjectAdmin/Create.cshtml
@@ -4,6 +4,15 @@
 @{
     ViewData["Title"] = "Create";
 }
+<style>
+    
+
+    .create-button {
+        background-color: black;
+        border-color: black;
+        color: white;
+    }
+</style>
 
 <h1>Create</h1>
 
@@ -19,7 +28,7 @@
                 <span asp-validation-for="Subject.Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary create-button" />
             </div>
         </form>
     </div>
