--- a/SnackisUppgif-main/SnackisUppgift/Pages/Admin/SubjectAdmin/Edit.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Admin/SubjectAdmin/Edit.cshtml
@@ -5,6 +5,14 @@
     ViewData["Title"] = "Edit";
 }
 
+<style>
+    .save-button {
+        background-color: black;
+        border-color: black;
+        color: red;
+    }
+</style>
+
 <h1>Modify</h1>
 
 <h4>Topic</h4>
@@ -20,7 +28,7 @@
                 <span asp-validation-for="Subject.Category" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary save-button" />
             </div>
         </form>
     </div>
