--- a/SnackisUppgif-main/SnackisUppgift/Pages/DmIndex.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/DmIndex.cshtml
@@ -2,7 +2,7 @@
 @model SnackisUppgift.Pages.DmIndexModel
 <style>
     body {
-        background-image: url('/Backgroundimages/best-background-for-website-14.png');
+        background-image: url('images.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
