--- a/SnackisUppgif-main/SnackisUppgift/Pages/Admin/Roles.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Admin/Roles.cshtml
@@ -2,97 +2,85 @@
 @model SnackisUppgift.Pages.Roles.IndexModel
 @{
 }
-<head>
-	<style>
-		.body {
-			background-image: url('/Backgroundimages/best-background-for-website-14.png');
-			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center;
-		}
-	</style>
-</head>
 
 
-<h1>Admin</h1>
 
-<div>
-	<h3>Existing Roles</h3>
-	@foreach (var role in Model.Roles)
-	{
-		<p>@role.Name</p>
-	}
-</div>
-<div>
-	<form method="post">
-		<label for="RemoveRoleName">Remove Role</label>
-		<input name="RemoveRoleName" id="RemoveRoleName" />
-		<input type="submit" value="Remove Role" class="btn btn-primary removal-button" />
-	</form>
-</div>
-@if (ViewData.ModelState["RoleRemoval"]?.Errors.Count > 0)
-{
-	<div class="alert alert-danger">
-		<ul>
-			@foreach (var error in ViewData.ModelState["RoleRemoval"].Errors)
-			{
-				<li>@error.ErrorMessage</li>
-			}
-		</ul>
-	</div>
-}
-<div>
-	@if (Model.IsAdmin)
-	{
-		<p class="alert-success">You have all permissions</p>
-	}
-	@if (Model.IsUser)
-	{
-		<p class="alert-danger">You dont have all permissions</p>
-	}
-</div>
-<div>
-	<h3>Existing Roles: </h3>
-	<table class="table">
-
-		<tr>
-			<th>Username</th>
-			@foreach (var role in Model.Roles)
-			{
-				<th>@role.Name</th>
-			}
-		</tr>
-		@foreach (var user in Model.Users)
-		{
-			<tr>
-				<td>@user.UserName</td>
-
-				@foreach (var role in Model.Roles)
-				{
-					if (await Model._userManager.IsInRoleAsync(user, role.Name))
-					{
-						<td>
-							<a href="?RemoveUserId=@user.Id&Role=@role.Name" class="bg-success text-white p-1">Yes</a>
-						</td>
-					}
-					else
-					{
-						<td>
-							<a href="?AddUserId=@user.Id&Role=@role.Name" class="bg-danger text-white p-1">No</a>
-						</td>
-					}
-				}
-			</tr>
-		}
-
-	</table>
-</div>
-
-<div>
-	<form method="post">
-		<label for="RoleName">Add New Role</label>
-		<input name="RoleName" id="RoleName" />
-		<input type="submit" value="Add new role" class="btn btn-primary add-role" />
-
-	</form>
-</div>
+<body style="background-image: url('images.png'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+    <!-- Your content here -->
+    <h1 class="admin-color">Admin</h1>
+    <div>
+        <h3 class="existing-roles">Existing Roles</h3>
+        @foreach (var role in Model.Roles)
+        {
+            <p class="role-name">@role.Name</p>
+        }
+    </div>
+    <div>
+        <form method="post">
+            <label for="RemoveRoleName" class=" remove-role">Remove Role</label>
+            <input name="RemoveRoleName" id="RemoveRoleName" />
+            <input type="submit" value="Remove Role" class="btn btn-primary removal-button" />
+        </form>
+    </div>
+    @if (ViewData.ModelState["RoleRemoval"]?.Errors.Count > 0)
+    {
+        <div class="alert alert-danger">
+            <ul>
+                @foreach (var error in ViewData.ModelState["RoleRemoval"].Errors)
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            </ul>
+        </div>
+    }
+    <div>
+        @if (Model.IsAdmin)
+        {
+            <p class="alert-success">You have all permissions</p>
+        }
+        @if (Model.IsUser)
+        {
+            <p class="alert-danger">You dont have all permissions</p>
+        }
+    </div>
+    <div>
+        <h3 class="role-color">Existing Roles: </h3>
+        <table class="table table-color">
+            <tr>
+                <th>Username</th>
+                @foreach (var role in Model.Roles)
+                {
+                    <th>@role.Name</th>
+                }
+            </tr>
+            @foreach (var user in Model.Users)
+            {
+                <tr>
+                    <td>@user.UserName</td>
+                    @foreach (var role in Model.Roles)
+                    {
+                        if (await Model._userManager.IsInRoleAsync(user, role.Name))
+                        {
+                            <td>
+                                <a href="?RemoveUserId=@user.Id&Role=@role.Name" class="bg-success text-white p-1">Yes</a>
+                            </td>
+                        }
+                        else
+                        {
+                            <td>
+                                <a href="?AddUserId=@user.Id&Role=@role.Name" class="bg-danger text-white p-1">No</a>
+                            </td>
+                        }
+                    }
+                </tr>
+            }
+        </table>
+    </div>
+    <div>
+        <form method="post">
+            <label for="RoleName" class="role-new">Add New Role</label>
+            <input name="RoleName" id="RoleName" />
+            <input type="submit" value="Add new role" class="btn btn-primary add-role" />
+        </form>
+    </div>
+</body>
