--- a/SnackisUppgif-main/SnackisUppgift/Pages/Reply.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Reply.cshtml
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-image: url('/Backgroundimages/wp2668083.png');
+            background-image: url('images.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
