--- a/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
+++ b/SnackisUppgif-main/SnackisUppgift/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <style>
     .body {
-        background-image: url('/Backgroundimages/best-background-for-website-14.png');
+        background-image: url('images.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
